--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ env:
     - DESTINATION="OS=12.0,name=iPhone XS"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=12.0,name=iPhone XR"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=11.2,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="YES"
-    - DESTINATION="OS=10.3,name=iPhone 8 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
-    - DESTINATION="OS=9.3,name=iPhone 7"           SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
-    - DESTINATION="OS=8.4,name=iPhone 6"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=11.1,name=iPhone 8 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=10.1,name=iPhone 7"           SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=9.3,name=iPhone 6s Plus"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=8.1,name=iPhone 6"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
 script:
