--- a/PasscodeLockDemo/Info.plist
+++ b/PasscodeLockDemo/Info.plist
@@ -16,6 +16,8 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Use Face ID to unlock</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
