--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: swift
-osx_image: xcode11
+language: objective-c
+osx_image: xcode11.1
 branches:
   only:
     - master
@@ -11,14 +11,14 @@ env:
     - IOS_FRAMEWORK_SCHEME="PasscodeLock"
     - EXAMPLE_SCHEME="PasscodeLockDemo"
   matrix:
-    - DESTINATION="OS=13.0,name=iPhone 11 Pro" SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=13.1,name=iPhone 11 Pro" SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=13.0,name=iPhone 11"     SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=12.1,name=iPhone XS Max" SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=11.2,name=iPhone X"      SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="YES"
     - DESTINATION="OS=11.1,name=iPhone 8 Plus" SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
-    - DESTINATION="OS=10.3,name=iPhone 7"      SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
-    - DESTINATION="OS=9.3,name=iPhone 6s Plus" SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
-    - DESTINATION="OS=8.1,name=iPhone 6"       SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=11.0,name=iPhone 7"      SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    # - DESTINATION="OS=9.3,name=iPhone 6s Plus" SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    # - DESTINATION="OS=8.1,name=iPhone 6"       SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="NO" BUILD_EXAMPLE="YES" POD_LINT="NO"
 script:
   - set -o pipefail
   - xcodebuild -version
